rc fixed + cell outline

--- a/Detonation/Config/DefaultGame.ini
+++ b/Detonation/Config/DefaultGame.ini
@@ -1,3 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D8244D6C4D2394A0838C03A710938ED5
-ProjectName=First Person BP Game Template
+ProjectName=RC: The Survival
+CopyrightNotice=
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "10EFD7EC44D96BAB78D4F28C95078DC9", "RC: The Survival")
+Homepage="https://bogaardryan.com"
+SupportContact=contact@bogaardryan.com
+CompanyName=Ryan van den Bogaard
+
