--- a/Detonation/Config/DefaultInput.ini
+++ b/Detonation/Config/DefaultInput.ini
@@ -77,6 +77,9 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
 +ActionMappings=(ActionName="ResetVR",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Grip1)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=OculusTouchpad_Touchpad)
++ActionMappings=(ActionName="SwapController",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
++ActionMappings=(ActionName="SwapController",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
++ActionMappings=(ActionName="SwapController",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_FaceButton_Top)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
@@ -93,6 +96,12 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="LookUp",Scale=-1.000000,Key=MouseY)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=MotionController_Left_Thumbstick_Y)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=MotionController_Left_Thumbstick_X)
++AxisMappings=(AxisName="DriveForward",Scale=1.000000,Key=W)
++AxisMappings=(AxisName="DriveForward",Scale=-1.000000,Key=S)
++AxisMappings=(AxisName="DriveForward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="DriveForward",Scale=-1.000000,Key=Down)
++AxisMappings=(AxisName="DriveForward",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
++AxisMappings=(AxisName="DriveForward",Scale=-1.000000,Key=Gamepad_LeftTriggerAxis)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
