--- a/Detonation/Config/DefaultGame.ini
+++ b/Detonation/Config/DefaultGame.ini
@@ -6,4 +6,5 @@ ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "10EFD7EC44D96BAB78D
 Homepage="https://bogaardryan.com"
 SupportContact=contact@bogaardryan.com
 CompanyName=Ryan van den Bogaard
+Description=Remote Detonation is a posterized zombie survival game about a security worker having to break out of his last stance as he has run out of favorite baked beans and cat food. As a RC and explosives nut he jammed together the ultimate RC car that will blow his path to freedom.
 
