--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ Plugins/*/Binaries/*
 
 # Builds
 Build/*
+Detonation/[Bb]uilds/*
 
 # Whitelist PakBlacklist-<BuildConfiguration>.txt files
 !Build/*/
