--- a/Detonation/Config/DefaultGame.ini
+++ b/Detonation/Config/DefaultGame.ini
@@ -8,3 +8,10 @@ SupportContact=contact@bogaardryan.com
 CompanyName=Ryan van den Bogaard
 Description=Remote Detonation is a posterized zombie survival game about a security worker having to break out of his last stance as he has run out of favorite baked beans and cat food. As a RC and explosives nut he jammed together the ultimate RC car that will blow his path to freedom.
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCompressed=True
+bShareMaterialShaderCode=True
+bSharedMaterialNativeLibraries=True
+bSkipEditorContent=True
+StagingDirectory=(Path="../../../../../../Users/bogaa/Documents/GitHub/ue4jam-summer-2019/Detonation/Builds/remoteDetonation-3-28")
+
